# autoname

./: .gitignore  LICENSE  Makefile  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: question.md
.github/workflows/: coverage.yml  test.yml
autoname/: __init__.py
tests/: test_main.py
