[tool.poetry]
name = "autoname"
version = "1.0.0"
description = "an enum `AutoName` from python docs with multiple stringcase options"
authors = ["Nutchanon Ninyawee <me@nutchanon.org>"]
license = "ISC"
readme = "README.md"
repository = "https://github.com/CircleOnCircles/autoname"

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
coverage = "^5.5"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
