[tool.poetry]
name = "autoname"
version = "2.0.0"
description = "an enum `AutoName` from python docs with multiple stringcase options"
authors = ["Nutchanon Ninyawee <me@nutchanon.org>"]
license = "ISC"
readme = "README.md"
repository = "https://github.com/wasdee/autoname"
packages = [{ include = "autoname" }, { include = "autoname/py.typed" }]


[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
coverage = "^5.5"

[tool.poetry.group.dev.dependencies]
mypy = "^1.2.0"
ruff = "^0.0.261"
black = "^23.3.0"
pytest-cov = "^4.0.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.ruff]
line-length = 88
